--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <!-- Footer start  -->
     <footer>
         <footer>
-            <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="#">Harshal Patil</a></p>
+            <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="https://github.com/harshal80">Harshal Patil</a></p>
         </footer>
     </footer>
     <!-- End  -->
