--- a/about.html
+++ b/about.html
@@ -327,7 +327,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="#">Harshal Patil</a></p>
+        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href=" https://github.com/harshal80">Harshal Patil</a></p>
     </footer>
 
 
