--- a/catlog.html
+++ b/catlog.html
@@ -205,7 +205,7 @@
 
     <!-- Footer start  -->
     <footer>
-        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="#">Harshal Patil</a></p>
+        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="https://github.com/harshal80">Harshal Patil</a></p>
     </footer>
     <!-- End  -->
 
