--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
     </main>
     <!-- Footer start  -->
     <footer>
-        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="#">Harshal Patil</a></p>
+        <p>&copy; 2024 <strong>HarshEco</strong> | Designed by <a href="https://github.com/harshal80">Harshal Patil</a></p>
     </footer>
     <!-- Footer end  -->
 
